--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -18,7 +18,7 @@
 	--clr_1: #FFD3DB58;
 	--clr_2: #F3E6D788; /*Beige claro*/
 	--clr_3: #E1C19D; /*Beige oscuro*/
-	--clr_4: #FF99AB; /*Rosa oscuro*/
+	--clr_4: #FFD3DB; /*Rosa oscuro*/
 	--clr_5: #8B5219; /*Cafe oscuro*/
 	--clr_6: rgb(249, 242, 234);
 	--clr_7: #F3E6D7;
